# small_sentence_splitter

./: README.md  pyproject.toml
benchmarks/: comparison.txt
small_sentence_splitter/: __init__.py  decision_tree.py  dt_tokenizer.py  feature_extractors.py  rf_tokenizer.py  sentence_tokenizer.py
src/small_sentence_splitter/: decision_tree.py  dt_tokenizer.py  sentence_tokenizer.py
tests/integration_tests/: test_dt_tokenizer.py  test_rf_tokenizer.py
